--- a/kimwebpage.html
+++ b/kimwebpage.html
@@ -21,7 +21,7 @@
         The new Air Force symbol is based on the familiar World War II "Hap" Arnold wings and represents the service's heritage. The symbol’s modern design represents the Air Force’s present and future leading edge capabilities defending the United States. 
         1998: Research, surveys and focus groups commissioned
         1999: Symbol designed
-        May 2000: Trademark registration filed
+        <!--May 2000: Trademark registration filed-->
         2001: Symbol tested throughout Air Force
         2002: Survey of internal Air Force audience revealed 90% identify the new symbol as the official Air Force symbol
         September 2003: Trademark registration date. Serial #76040432[1] and Registration #2767190
