--- a/kimwebpage.html
+++ b/kimwebpage.html
@@ -4,29 +4,105 @@
 <head>
 <meta charset-"utf-8">
 <title>Kim Dallas Webpage</title>
-<link rel="stylesheet" type="text/css" href="css/style-1.css">
+<type="text/css">             
+<link rel="stylesheet" type="text/css" href="css/style2.css">
+<meta name="viewport" content="width device-width initial scale=1.0">
 
 </head>
-
-<body>
-<h1>Kim Dallas Webpage</h1>
-<h1>What does Freedom Mean</h1>
- <img src=https://upload.wikimedia.org/wikipedia/commons/0/04/United_States_Air_Force_logo%2C_blue_and_silver.jpg
-
-
-<img src="https://www.bing.com/images/th.jpg">
-<h2>USAF symbol history</h2>
-<h3></h3>
-<div>In the late 1990s, Air Force senior leadership recognized the need to design an official symbol and develop a centralized theme to encourage young people to join, encourage airmen to stay, and to build understanding, appreciation, and support for America's Air Force. They directed a commercial company, specializing in corporate branding, to research and develop a unique symbol. Company representatives traveled throughout the Air Force and to major U.S. cities to conduct research and become intimately familiar with the Air Force and its culture, environment, and heritage. 
-        The new Air Force symbol is based on the familiar World War II "Hap" Arnold wings and represents the service's heritage. The symbol’s modern design represents the Air Force’s present and future leading edge capabilities defending the United States. 
-        1998: Research, surveys and focus groups commissioned
-        1999: Symbol designed
-        <!--May 2000: Trademark registration filed-->
-        2001: Symbol tested throughout Air Force
-        2002: Survey of internal Air Force audience revealed 90% identify the new symbol as the official Air Force symbol
-        September 2003: Trademark registration date. Serial #76040432[1] and Registration #2767190
-        May 2004: USAF Chief of Staff designates Symbol as the Official Symbol of the Air Force [2] </div>
  
+<body>
+
+   <div class="asdfasdf"  style="width: 100%; margin: 0 auto; display: block;">
+      <h1 class='title'>Kim Dallas </h1>
+      <h2>The history behind the Armed Forces Branch symbols.</h2>
+   </div>
+
+<div class="navbar-cont" style="width: 100%; margin: 0 auto; display: block;">
+   <div class="navbar">
+      <ul>
+         <a href="#">USAF</a>
+         <a href="#">US Navy</a>
+         <a href="#">US Army</a>
+         <a href="#">US Marine</a>
+         <a href="#">US Coast Guard</a>
+      </ul>
+   </div>
+
+<div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
+
+<h2>USAF symbol history</h2>
+
+<img src="images/thPT073C4G.jpg" alt="USAF symbol black and silver">
+
+<p>In the late 1990s, Air Force senior leadership recognized the need to design an official symbol and develop a centralized theme to encourage young people to join, 
+   <br>encourage airmen to stay, and to build understanding, appreciation, and support for America's Air Force.</p>
+ </div>      
+
+<div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
+
+
+<h2>US Army Symbol History</h2>
+<img src="images/thUGCVD106.jpg" alt="US Army symbol">
+
+<p> The Army Seal was used originally during the American Revolution to authenticate documents. It displayed the designation "War Office", which was synonymous with Headquarters of the Army, and the Roman date MDCCLXXVIII (1778) the first time it was used. It remained unchanged until 1947, when the War Office banner was replaced with "Department of the Army" and the date was changed to 1775, the year in which the Army was established. The seal embodies the Army's ideals of loyalty, vigilance, perseverance, truth, courage, zeal, fortitude, remembrance, determination, constancy, achievement, dignity, and honor. The changes were legislated by the National Security Act of 1947, and authorized by Section 3011, Title 10, United States Code. 
+      Prior to the establishment of the "Department of the Army Emblem", there was no official display item to identify the Army. </p>
+
+
+
+<div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
+
+ <h2>US Navy symbol history</h2>
+ <img src="images/navy1.png" alt=US Navy emblem>
+ <p>The history of the United States Navy divides into two major periods: the "Old Navy", a small but respected force of sailing ships that was also notable for innovation in the use of ironclads during the American Civil War, and the "New Navy", the result of a modernization effort that began in the 1880s and made it the largest in the world by the 1920s. 
+      The United States Navy claims 13 October 1775 as the date of its official establishment 
+      In 1882, the U.S. Navy consisted of many outdated ship designs.</p>
+</div>
+
+
+<div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
+
+ <h2>US Marine Core symbol history</h2>
+ <img src="images/thO2LUG6PV.jpg" alt="US Marine Core emblem">
+ <p>The history of the emblem started in 1775. The original emblem was built around a fouled anchor. Although more than 200 years has passed since then, the USMC symbols were modified less than 10 times. What does the symbol mean USMC?
+ </p>
+ </div>
+
+<div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
+
+ <h2>US Coast Guard symbol history</h2>
+ <img src="images/thAFGMA6WK.jpg" alt="US Coast Guard emblem">
+ <p>The history of the United States Coast Guard goes back to the United States Revenue Cutter Service, which was founded on 4 August 1790 as part of the Department of the Treasury. The Revenue Cutter Service and the United States Life-Saving Service were merged to become the Coast Guard</p>
+ <div class="column">
+      <form action="/action_page.php">
+        <label for="fname">First Name</label>
+        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <label for="lname">Last Name</label>
+        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+        <label for="branch">branch</label>
+        <select id="branch" name="branch">
+          <option value="USAF">USAF</option>
+          <option value="USNavy">Navy</option>
+          <option value="USArmy">USArmy</option>
+          <option value="USMC">USMC</option>
+          <option value="USCoastGuard">USCoastGuard</option>
+        </select>
+        <label for="subject">Subject</label>
+        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+ <aside>"Which branch are you? 
+   <ul>
+      <li>USAF</li>
+      <li>USNavy</li>
+      <li>USArmy</li>
+      <li>USMarine Core</li>
+      <li>USCoastGuard</li>
+   </ul>
+</aside>
+
+</div>
+<footer>i have no idea</footer>
 </body>
 </html>
 
