--- a/kimwebpage.html
+++ b/kimwebpage.html
@@ -4,13 +4,15 @@
    
 <meta charset="utf-8">
 <title>Kim Dallas Webpage</title>
-<link rel="stylesheet" type="text/css" href="css/style-1.css">
-<meta name="viewport" content="width device-width initial scale=1.0">
+<link rel="stylesheet" type="text/css" href="css/style-1.css"/>
+<meta name="viewport" content="width device-width initial scale"/>
+
 
 </head>
- 
-<body>
 
+<body>
+   <script src="js/webpage.js"></script>
+   
 <header>
    <div class="asdfasdf"  style="width: 100%; margin: 0 auto; display: block;">
       <h1 class='title'>Kim Dallas </h1>
@@ -20,11 +22,11 @@
 <div class="navbar-cont" style="width: 100%; margin: 0 auto; display: block;">
    <div class="navbar">
       <ul>
-         <a href="#">USAF</a>
-         <a href="#">US Navy</a>
-         <a href="#">US Army</a>
-         <a href="#">US Marine</a>
-         <a href="#">US Coast Guard</a>
+         <li><a href="#">USAF</a></li>
+         <li><a href="#">US Navy</a></li>
+         <li><a href="#">US Army</a></li>
+         <li><a href="#">US Marine</a></li>
+         <li><a href="#">US Coast Guard</a></li>
       </ul>
    </div>
 </div>
