--- a/kimwebpage.html
+++ b/kimwebpage.html
@@ -40,7 +40,7 @@
 
 <h2>USAF symbol history</h2>
 
-<img src="images/thPT073C4G.jpg" alt="USAF symbol black and silver">
+<img src="images/HH153.jpg" alt="USAF symbol black and silver">
 
 <p>In the late 1990s, Air Force senior leadership recognized the need to design an official symbol and develop a centralized theme to encourage young people to join, 
 <br>encourage airmen to stay, and to build understanding, appreciation, and support for America's Air Force.</p>
@@ -48,7 +48,7 @@
 
 <div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
 <h2>US Army Symbol History</h2>
-<img src="images/thUGCVD106.jpg" alt="US Army symbol">
+<img src="images/Military_service_mark_of_the_United_States_Army.png" alt="US Army symbol">
 
 <p> The Army Seal was used originally during the American Revolution to authenticate documents. It displayed the designation "War Office", which was synonymous with Headquarters of the Army, and the Roman date MDCCLXXVIII (1778) the first time it was used. It remained unchanged until 1947, when the War Office banner was replaced with "Department of the Army" and the date was changed to 1775, the year in which the Army was established. The seal embodies the Army's ideals of loyalty, vigilance, perseverance, truth, courage, zeal, fortitude, remembrance, determination, constancy, achievement, dignity, and honor. The changes were legislated by the National Security Act of 1947, and authorized by Section 3011, Title 10, United States Code. 
 Prior to the establishment of the "Department of the Army Emblem", there was no official display item to identify the Army. </p></div>
@@ -56,7 +56,7 @@ Prior to the establishment of the "Department of the Army Emblem", there was no 
 <div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
 
       <h2>US Navy symbol history</h2>
-      <img src="images/navy1.png" alt=US Navy emblem>
+      <img src="images/navyblack.png" alt=US Navy emblem>
       <p>The history of the United States Navy divides into two major periods: the "Old Navy", a small but respected force of sailing ships that was also notable for innovation in the use of ironclads during the American Civil War, and the "New Navy", the result of a modernization effort that began in the 1880s and made it the largest in the world by the 1920s. 
             The United States Navy claims 13 October 1775 as the date of its official establishment 
             In 1882, the U.S. Navy consisted of many outdated ship designs.</p>
@@ -66,14 +66,14 @@ Prior to the establishment of the "Department of the Army Emblem", there was no 
       <div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
       
       <h2>US Marine Core symbol history</h2>
-      <img src="images/thO2LUG6PV.jpg" alt="US Marine Core emblem">
+      <img src="images/HH153.jpg" alt="US Marine Core emblem">
       <p>The history of the emblem started in 1775. The original emblem was built around a fouled anchor. Although more than 200 years has passed since then, the USMC symbols were modified less than 10 times. What does the symbol mean USMC?
       </p>
       </div>
       
       <div class="symbol"  style="width: 100%; margin: 0 auto; display: block;">
       <h2>US Coast Guard symbol history</h2>
-      <img src="images/thAFGMA6WK.jpg" alt="US Coast Guard emblem">
+      <img src="images/coastguard.jpg" alt="US Coast Guard emblem">
       <p>The history of the United States Coast Guard goes back to the United States Revenue Cutter Service, which was founded on 4 August 1790 as part of the Department of the Treasury. The Revenue Cutter Service and the United States Life-Saving Service were merged to become the Coast Guard</p>
       </div>
 
